--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "sass": "^1.81.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
