--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "next": "14.2.16",
+    "next-intl": "^3.26.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.81.0",
